<resources>
    <string name="app_name">Monitoring System</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="site_1">Участок №1</string>
    <string name="events">События</string>
    <string name="login">Логин</string>
    <string name="new_record">Новая запись</string>
    <string name="tank">Садок</string>
    <string name="indicators">Показатели</string>
    <string name="feeding">Кормление</string>
    <string name="fish">Рыба</string>
    <string name="save_indicators">Внести показатели в журнал</string>
    <string name="feeding_time">Время кормления</string>
    <string name="action_edit">Изменить</string>
    <string name="indicator">Показатель</string>
    <string name="measurement_time">Время измерения</string>
    <string name="main_she">Главная</string>
    <string name="logout">Выйти</string>
    <string name="reason">Причина</string>
    <string name="where">Куда</string>
    <string name="user">Пользователь</string>
    <string name="site">Участок</string>
    <string name="events_filter">Фильтр событий</string>
    <string name="temperature">Температура</string>
    <string name="oxygen">Кислород</string>
    <string name="amount">Количество</string>
    <string name="producer">Производитель</string>
    <string name="next_feeding_recommendation">Следующее кормление (рекомендовано)</string>
    <string name="select_tank">Выберите садок</string>
    <string name="temperature_avg">Температура (ср.)</string>
    <string name="oxygen_avg">Кислород (ср.)</string>
    <string name="amount_avg">Количество (ср.)</string>
    <string name="action_login">Войти</string>
    <string name="password">Пароль</string>
    <string name="chart_no_data">Нет данных за выбранный период</string>
    <string name="plans">Задачи</string>
    <string name="cancel">Отмена</string>
    <string name="apply">Применить</string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
    <string name="mortality">Отход</string>
    <string name="moving">Перемещение</string>
    <string name="seeding">Зарыбление</string>
    <string name="planned_relocation">Плановая пересадка</string>
    <string name="info_permissions_required">Для ввода голосовых команд приложению требуются некоторые разрешения</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="login_error">При входе в систему произошла ошибка</string>
    <string name="one_day">День</string>
    <string name="three_days">3 дня</string>
    <string name="seven_days">7 дней</string>
    <string name="amount_sum">Количество (сум.)</string>
    <string name="area_info">Сводка по объекту</string>
    <string name="error_no_such_tank">Нет данных по садку</string>
    <string name="area_overview">Сводка по хозяйству</string>
    <string name="sites_number">Количество участков</string>
    <string name="tanks_number">Количество садков</string>
    <string name="fish_amount">Количество рыбы</string>
    <string name="overview_all_weight">Общая биомасса</string>
    <string name="site_overview">Сводка по участку</string>
    <string name="average_temperature">Средняя температура</string>
    <string name="average_oxygen">Средний кислород</string>
    <string name="clear_filter">Очистить фильтр</string>
    <string name="refresh_data">Обновить данные</string>
    <string name="average_fish_weight">Средняя навеска</string>
    <string name="fish_catch">Вылов</string>
    <string name="fish_weight_kg">Вес рыбы, кг</string>
    <string name="vet_examination">Ветеринарное обследование</string>
    <string name="other_add_comment">Другое (добавить комментарий)</string>
    <string name="description">Описание</string>
    <string name="lower_plant_density">Уменьшение плотности посадки</string>
    <string name="cleaning_tank">Чистка бассейна</string>
    <string name="fish_illness">Болезнь рыбы</string>
    <string name="measuring_fish_weight">Измерение навески</string>
    <string name="selling">Продажа</string>
    <string name="error_no_tank">Ошибка. Выберите садок</string>
    <string name="error_no_indicators">Ошибка. Добавьте хотя бы один индикатор</string>
    <string name="error_no_feed_producer">Ошибка. Укажите производителя корма</string>
    <string name="error_no_moving_destination_tank">Ошибка. Укажите садок, в который перемещается рыба</string>
    <string name="error_no_moving_destination_site">Ошибка. Укажите участок, в который перемещается рыба</string>
    <string name="succes_indicators_added">Готово. Индикаторы добавлены в журнал</string>
    <string name="record_deleted">Запись удалена</string>
    <string name="plans_filter">Фильтр задач</string>
    <string name="new_plan">Новая задача</string>
    <string name="add_plan">Добавить задачу</string>
    <string name="feeding_coef">Кормовой коэффициент</string>
    <string name="press_to_select_date">Нажмите, чтобы выбрать дату</string>
    <string name="from">С</string>
    <string name="to">По</string>
    <string name="error_no_feed_coef">Ошибка. Укажите кормовой коэффициент</string>
    <string name="error_no_feed_period_from">Ошибка. Укажите начало периода кормления</string>
    <string name="error_no_feed_period_to">Ошибка. Укажите конец периода кормления</string>
    <string name="error_no_record">Ошибка. Нет никакой записи</string>
    <string name="error_init_voice_input">Не удалось запустить голосовой ввод</string>
    <string name="date_picker_hint">Нажмите, чтобы добавить дату</string>
    <string name="error_no_site">Ошибка. Выберите участок</string>

    <plurals name="tanks_number">
        <item quantity="zero">%d садков</item>
        <item quantity="one">%d садок</item>
        <item quantity="few">%d садка</item>
        <item quantity="many">%d садков</item>
        <item quantity="other">%d садков</item>
    </plurals>
</resources>
