<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainpage.TankInfoFragment">

    <include
        android:id="@+id/tank_info"
        layout="@layout/layout_tank_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabPaddingStart="-1dp"
        app:tabPaddingEnd="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/tank_info">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_indicators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicators" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_feeding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeding" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_fish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish" />
    </android.support.design.widget.TabLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorGreyLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/tab_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>